--- a/xaml_datas/CheckScreen_Global.xaml
+++ b/xaml_datas/CheckScreen_Global.xaml
@@ -5,28 +5,29 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PlanCheck_IUCT"
              mc:Ignorable="d" 
-             d:DesignHeight="120" d:DesignWidth="800" Background="AliceBlue">
-    <Grid>
-        <Border CornerRadius="6" BorderBrush="Black" Background="Transparent" BorderThickness="2" DockPanel.Dock="Top">
+             d:DesignHeight="120" d:DesignWidth="800" Background="AliceBlue"
+             Style="{x:Null}">
+    <Grid Style="{x:Null}" >
+        <Border Style="{x:Null}" CornerRadius="6"  BorderBrush="Black" Background="Transparent" BorderThickness="2" DockPanel.Dock="Top">
 
-            <StackPanel MouseLeftButtonUp="StackPanel_MouseLeftButtonUp" MinWidth="800"  Background="{Binding ResultGlobalColor}" VerticalAlignment="Center" Margin="5">
+            <StackPanel Style="{x:Null}" MouseLeftButtonUp="StackPanel_MouseLeftButtonUp" MinWidth="800"  Background="{Binding ResultGlobalColor}" VerticalAlignment="Center" Margin="5">
                 <!--<DockPanel  VerticalAlignment="Center" HorizontalAlignment="Stretch">
                     <TextBlock Margin="20,0,0,0" Background="Transparent" FontSize="20"
                            Text="Título"></TextBlock>
                     <TextBlock FontSize="20" HorizontalAlignment="Right" Background="Transparent" >Resultado</TextBlock>
                 </DockPanel>-->
-                <DockPanel Margin="20" Background="Transparent"  VerticalAlignment="Center" HorizontalAlignment="Stretch">
-                    <TextBlock Background="Transparent" Foreground="Black" FontSize="20"
+                <DockPanel Style="{x:Null}"  Margin="20" Background="Transparent"  VerticalAlignment="Center" HorizontalAlignment="Stretch">
+                    <TextBlock Style="{x:Null}" Background="Transparent" Foreground="Black" FontSize="20"
                            Text="{Binding TitleGlobal}" FontWeight="Bold"></TextBlock>
-                    <Button MinWidth="50"  Click="Button_Click" Margin="0,0,5,0" HorizontalAlignment="Right" Background="Transparent" Foreground="Black" FontSize="20"
+                    <Button Style="{x:Null}" MinWidth="50"  Click="Button_Click" Margin="0,0,5,0" HorizontalAlignment="Right" Background="Transparent" Foreground="Black" FontSize="20"
                         Content="{Binding ResultGlobalString}"></Button>
                 </DockPanel>
-                <StackPanel  HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <TextBlock x:Name="CommentBlock" Padding="5" Visibility="Collapsed" Background="Transparent" Foreground="Black" FontSize="20"
+                <StackPanel Style="{x:Null}"  HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock Style="{x:Null}"  x:Name="CommentBlock" Padding="5" Visibility="Collapsed" Background="Transparent" Foreground="Black" FontSize="20"
                            Text="{Binding Comment}"></TextBlock>
                 </StackPanel>
-                <StackPanel>
-                    <ListView HorizontalAlignment="Right" x:Name="CheckScreen_lsv" Visibility="Collapsed">
+                <StackPanel Style="{x:Null}">
+                    <ListView Style="{x:Null}"  HorizontalAlignment="Right" x:Name="CheckScreen_lsv" Visibility="Collapsed">
                     </ListView>
                 </StackPanel>
 
