--- a/xaml_datas/CheckScreen_Item.xaml
+++ b/xaml_datas/CheckScreen_Item.xaml
@@ -5,22 +5,23 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PlanCheck_IUCT"
              mc:Ignorable="d" 
-             d:DesignHeight="80" d:DesignWidth="778" Background="AliceBlue">
-    <Grid>
-        <Border CornerRadius="6" BorderBrush="#FF35AED6" Background="Transparent" BorderThickness="2" DockPanel.Dock="Top">
-            <StackPanel MouseLeftButtonUp="StackPanel_Item_MouseLeftButtonUp" Height="80" MinWidth="778"  Background="{Binding ResultItemColor}" VerticalAlignment="Center" Margin="5">
+             d:DesignHeight="80" d:DesignWidth="778" Background="AliceBlue"
+             Style="{x:Null}" >
+    <Grid Style="{x:Null}" >
+        <Border Style="{x:Null}" CornerRadius="6" BorderBrush="#FF35AED6" Background="Transparent" BorderThickness="2" DockPanel.Dock="Top">
+            <StackPanel Style="{x:Null}"  MouseLeftButtonUp="StackPanel_Item_MouseLeftButtonUp" Height="80" MinWidth="778"  Background="{Binding ResultItemColor}" VerticalAlignment="Center" Margin="5">
                 <!--<DockPanel  VerticalAlignment="Center" HorizontalAlignment="Stretch">
                     <TextBlock Margin="20,0,0,0" Background="Transparent" FontSize="20"
                            Text="Título"></TextBlock>
                     <TextBlock FontSize="20" HorizontalAlignment="Right" Background="Transparent" >Resultado</TextBlock>
                 </DockPanel>-->
-                <DockPanel Margin="0,10,20,30" Background="Transparent"  VerticalAlignment="Center" HorizontalAlignment="Stretch">
-                    <TextBlock Background="Transparent" FontSize="15"
+                <DockPanel Style="{x:Null}"  Margin="0,10,20,30" Background="Transparent"  VerticalAlignment="Center" HorizontalAlignment="Stretch">
+                    <TextBlock Style="{x:Null}" Background="Transparent" FontSize="15"
                            Text="{Binding Item_Title}"></TextBlock>
-                    <Button MinWidth="50"  Click="Button_Click" Margin="0,0,5,0" HorizontalAlignment="Right" Background="Transparent" FontSize="20"
+                    <Button Style="{x:Null}"  MinWidth="50"  Click="Button_Click" Margin="0,0,5,0" HorizontalAlignment="Right" Background="Transparent" FontSize="20"
                         Content="{Binding Item_Result}"></Button>
                 </DockPanel>
-                <StackPanel  HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+                <StackPanel Style="{x:Null}"  HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
                     <StackPanel.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -29,10 +30,10 @@
                             <TranslateTransform Y="-25"/>
                         </TransformGroup>
                     </StackPanel.RenderTransform>
-                    <TextBlock x:Name="CommentaireBlock" Padding="5" Visibility="Visible" Background="Transparent" FontSize="15"
+                    <TextBlock Style="{x:Null}" x:Name="CommentaireBlock" Padding="5" Visibility="Visible" Background="Transparent" FontSize="15"
                            Text="{Binding Comment}">
                         <TextBlock.ToolTip>
-                            <StackPanel>
+                            <StackPanel Style="{x:Null}" >
                                 <TextBlock Text="{Binding Tooltip}"></TextBlock>
                             </StackPanel>
                         </TextBlock.ToolTip>
