--- a/xaml_datas/MainWindow.xaml
+++ b/xaml_datas/MainWindow.xaml
@@ -5,21 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PlanCheck_IUCT"
         mc:Ignorable="d"
-        Title="PlanCheck_IUCT"
-        WindowState="Maximized">
+        Title="PlanCheck_IUCT"        
+        WindowState="Maximized"
+        Style="{x:Null}" >
     <!--  Background="Aquamarine" -->
     <!-- Title="PlanCheck_IUCT" Height="900" Width="1400" /-->
-    
-    <Grid>
-        
-        
-        <ScrollViewer Grid.Column ="1">
-            
-            <StackPanel  Orientation="Vertical">
-                <StackPanel>
-                    <DockPanel>
-                        <StackPanel Width="1000">
-                            <Grid Margin="10" Background="AntiqueWhite">
+
+    <Grid Style="{x:Null}" >
+        <!-- Grid.Background>
+            <ImageBrush ImageSource="\\srv015\SF_COM\SIMON_LU\scriptsEclipse\00004-plancheck\xaml_datas\logo.png" Stretch="Uniform" />
+        </Grid.Background -->
+
+        <ScrollViewer Style="{x:Null}"  Grid.Column ="1">
+
+            <StackPanel Style="{x:Null}"  Orientation="Vertical">
+                <StackPanel Style="{x:Null}" >
+                    <DockPanel Style="{x:Null}" >
+                        <StackPanel Style="{x:Null}"  Width="1000">
+                            <Grid Style="{x:Null}" Margin="10" Background="AntiqueWhite">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="*" />
@@ -33,41 +36,41 @@
                                 </Grid.RowDefinitions>
 
                                 <!-- DOCTEUR -->
-                                <TextBlock Grid.Row="0" Grid.Column ="0" FontSize="15" Text="{Binding DoctorName}" Background="Wheat" Foreground="Black" TextAlignment="Left" ToolTip="Prescripteur"></TextBlock>
-                                <Ellipse Grid.Row="0" Grid.Column ="0"  Fill="{Binding DoctorBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left" StrokeThickness="2" Stroke="{Binding DoctorForegroundColor}" ToolTip="couleur RT"/>
+                                <TextBlock Style="{x:Null}"  Grid.Row="0" Grid.Column ="0" FontSize="15" Text="{Binding DoctorName}" Background="Wheat" Foreground="Black" TextAlignment="Left" ToolTip="Prescripteur"></TextBlock>
+                                <Ellipse Style="{x:Null}" Grid.Row="0" Grid.Column ="0"  Fill="{Binding DoctorBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left" StrokeThickness="2" Stroke="{Binding DoctorForegroundColor}" ToolTip="couleur RT"/>
 
                                 <!-- PATIENT -->
-                                <TextBlock Grid.Row="0" Grid.Column ="1" FontSize="15" FontWeight="Bold" Text="{Binding PatientFullName}" Background="Wheat" Foreground="{Binding  sexForegroundColor}" ToolTip="{Binding strPatientDOB}" TextAlignment="Right"></TextBlock>
+                                <TextBlock Style="{x:Null}"  Grid.Row="0" Grid.Column ="1" FontSize="15" FontWeight="Bold" Text="{Binding PatientFullName}" Background="Wheat" Foreground="{Binding  sexForegroundColor}" ToolTip="{Binding strPatientDOB}" TextAlignment="Right"></TextBlock>
 
                                 <!-- Plan creator -->
-                                <TextBlock  Grid.Row="1" Grid.Column ="0" FontSize="15" Text="{Binding PlanCreatorName}" Background="AntiqueWhite" Foreground="MidnightBlue" ToolTip="créateur du plan"  TextAlignment="Left"></TextBlock>
-                                <Ellipse Grid.Row="1" Grid.Column ="0"  Fill="{Binding PlanCreatorBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left"  StrokeThickness="2" Stroke="{Binding PlanCreatorForegroundColor}" ToolTip="couleur dosimétriste" />
+                                <TextBlock Style="{x:Null}"   Grid.Row="1" Grid.Column ="0" FontSize="15" Text="{Binding PlanCreatorName}" Background="AntiqueWhite" Foreground="MidnightBlue" ToolTip="créateur du plan"  TextAlignment="Left"></TextBlock>
+                                <Ellipse Style="{x:Null}"  Grid.Row="1" Grid.Column ="0"  Fill="{Binding PlanCreatorBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left"  StrokeThickness="2" Stroke="{Binding PlanCreatorForegroundColor}" ToolTip="couleur dosimétriste" />
 
                                 <!-- Plan ID -->
-                                <TextBlock Grid.Row="1" Grid.Column ="1" FontSize="15" Text="{Binding PlanAndCourseID}" Background="AntiqueWhite" Foreground="MidnightBlue" ToolTip="planID (CourseID)" TextAlignment="Right" VerticalAlignment="Center"></TextBlock>
+                                <TextBlock Style="{x:Null}" Grid.Row="1" Grid.Column ="1" FontSize="15" Text="{Binding PlanAndCourseID}" Background="AntiqueWhite" Foreground="MidnightBlue" ToolTip="planID (CourseID)" TextAlignment="Right" VerticalAlignment="Center"></TextBlock>
 
                                 <!-- Machine -->
-                                <TextBlock  Grid.Row="2" Grid.Column ="0" FontSize="15" Text="{Binding theMachine}" Background="Wheat" Foreground="Black"  ToolTip="Nom de la machine" TextAlignment="Left" VerticalAlignment="Center"></TextBlock>
-                                <Ellipse Grid.Row="2" Grid.Column ="0"  Fill="{Binding machineBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left"  StrokeThickness="2" Stroke="{Binding machineForegroundColor}" ToolTip="couleur user" />
+                                <TextBlock  Style="{x:Null}" Grid.Row="2" Grid.Column ="0" FontSize="15" Text="{Binding theMachine}" Background="Wheat" Foreground="Black"  ToolTip="Nom de la machine" TextAlignment="Left" VerticalAlignment="Center"></TextBlock>
+                                <Ellipse Style="{x:Null}" Grid.Row="2" Grid.Column ="0"  Fill="{Binding machineBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left"  StrokeThickness="2" Stroke="{Binding machineForegroundColor}" ToolTip="couleur user" />
 
                                 <!-- Champs -->
-                                <TextBlock  Grid.Row="2" Grid.Column ="1" TextWrapping="WrapWithOverflow" FontSize="15" Text="{Binding theFields}" TextAlignment="Right"  Background="Wheat" Foreground="Black" ToolTip="Description des champs"></TextBlock>
+                                <TextBlock Style="{x:Null}"  Grid.Row="2" Grid.Column ="1" TextWrapping="WrapWithOverflow" FontSize="15" Text="{Binding theFields}" TextAlignment="Right"  Background="Wheat" Foreground="Black" ToolTip="Description des champs"></TextBlock>
 
                                 <!-- User -->
-                                <TextBlock  Grid.Row="3" Grid.Column ="0" FontSize="15" Text="{Binding CurrentUserName}" Background="AntiqueWhite" Foreground="MidnightBlue" TextAlignment="Left" VerticalAlignment="Center" ToolTip="user name"></TextBlock>
-                                <Ellipse Grid.Row="3" Grid.Column ="0"  Fill="{Binding CurrentUserBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left"  StrokeThickness="2" Stroke="{Binding CurrentUserForegroundColor}" ToolTip="couleur user" />
+                                <TextBlock  Style="{x:Null}"  Grid.Row="3" Grid.Column ="0" FontSize="15" Text="{Binding CurrentUserName}" Background="AntiqueWhite" Foreground="MidnightBlue" TextAlignment="Left" VerticalAlignment="Center" ToolTip="user name"></TextBlock>
+                                <Ellipse Style="{x:Null}"  Grid.Row="3" Grid.Column ="0"  Fill="{Binding CurrentUserBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left"  StrokeThickness="2" Stroke="{Binding CurrentUserForegroundColor}" ToolTip="couleur user" />
 
                                 <!-- Commentaire prescription -->
-                                <TextBlock Grid.Row="3" Grid.Column ="1" FontStyle="Italic" TextWrapping="WrapWithOverflow" FontSize="15" Text="{Binding prescriptionComment}" Background="AntiqueWhite"  Foreground="MidnightBlue" ToolTip="Fractionnement et commentaire de la prescription" TextAlignment="Right"></TextBlock>
+                                <TextBlock Style="{x:Null}"  Grid.Row="3" Grid.Column ="1" FontStyle="Italic" TextWrapping="WrapWithOverflow" FontSize="15" Text="{Binding prescriptionComment}" Background="AntiqueWhite"  Foreground="MidnightBlue" ToolTip="Fractionnement et commentaire de la prescription" TextAlignment="Right"></TextBlock>
                             </Grid>
 
                         </StackPanel>
 
                     </DockPanel>
                 </StackPanel>
-                <DockPanel Width="980">
-                    <Border CornerRadius="3" BorderBrush="LightBlue" Background="White" BorderThickness="3" DockPanel.Dock="Top">
-                        <Grid Width="980">
+                <DockPanel Style="{x:Null}" Width="980">
+                    <Border Style="{x:Null}" CornerRadius="3" BorderBrush="LightBlue" Background="White" BorderThickness="3" DockPanel.Dock="Top">
+                        <Grid Style="{x:Null}" Width="980">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="730" />
                                 <ColumnDefinition Width="120" />
@@ -81,29 +84,29 @@
 
                             <!--StackPanel Grid.Row="0" Grid.Column ="0" Width="730" Height="33" HorizontalAlignment="Right" Background="White"-->
 
-                            <TextBlock x:Name="defaultProtocol" Grid.Row="0" Grid.Column ="0" FontSize="16"  Background="White"  Foreground="DarkBlue" FontWeight="Bold" ToolTip="Check-protocol proposé" VerticalAlignment="Center" Text="{Binding theProtocol}" HorizontalAlignment="Center"></TextBlock>
+                            <TextBlock Style="{x:Null}" x:Name="defaultProtocol" Grid.Row="0" Grid.Column ="0" FontSize="16"  Background="White"  Foreground="DarkBlue" FontWeight="Bold" ToolTip="Check-protocol proposé" VerticalAlignment="Center" Text="{Binding theProtocol}" HorizontalAlignment="Center"></TextBlock>
 
-                            <Button Grid.Row="0" Grid.Column ="1" x:Name="Verif_button" Content="Modifier..." Width="110" Height="32" Click="Choose_file_button_Click" ToolTip="Choisir un autre check-protocol" RenderTransformOrigin="-0.734,0.136"/>
+                            <Button Style="{x:Null}" Grid.Row="0" Grid.Column ="1" x:Name="Verif_button" Content="Modifier..." Width="110" Height="32" Click="Choose_file_button_Click" ToolTip="Choisir un autre check-protocol" RenderTransformOrigin="-0.734,0.136" />
 
-                            <Button Grid.Row="0" Grid.Column ="2" x:Name="OK_button" Content="Check!" Width="100" Height="32" Click="OK_button_click" ToolTip="Lancer la vérification" RenderTransformOrigin="-0.734,0.136"/>
+                            <Button Style="{x:Null}" Grid.Row="0" Grid.Column ="2" x:Name="OK_button" Content="Check!" Width="100" Height="32" Click="OK_button_click" ToolTip="Lancer la vérification" RenderTransformOrigin="-0.734,0.136" />
 
-                            <Button Grid.Row="0" Grid.Column ="3" Content="?" FontSize="10" FontFamily="Bauhaus" Click="Button_Click_help" Width="15" Height="32" Background="Coral" VerticalAlignment="Top" HorizontalAlignment="Right" ToolTip="Aide online si Chrome installé (sinon pdf)" />
+                            <Button Style="{x:Null}" Grid.Row="0" Grid.Column ="3" x:Name="HELP_button" Content="?" FontSize="10" FontFamily="Bauhaus" Click="Button_Click_help" Width="15" Height="32" Background="Coral" VerticalAlignment="Top" HorizontalAlignment="Right" ToolTip="Aide online si Chrome installé (sinon pdf)" />
 
                         </Grid>
                     </Border>
                 </DockPanel>
 
 
-                <StackPanel Height="30">
+                <StackPanel Style="{x:Null}"  Height="30">
                     <!-- ADD A SPACING -->
                 </StackPanel>
 
-                <StackPanel>
-                    <ListView HorizontalAlignment="Center" x:Name="CheckList" Visibility="Hidden">
+                <StackPanel Style="{x:Null}" >
+                    <ListView Style="{x:Null}" HorizontalAlignment="Center" x:Name="CheckList" Visibility="Hidden">
                     </ListView>
                 </StackPanel>
 
-                <StackPanel Height="60">
+                <StackPanel Style="{x:Null}" Height="60">
                     <!-- ADD A SPACING -->
                 </StackPanel>
 
